SFDC/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Additional_Remarks__c</fullName>
        <label>Additional Remarks</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF( NOT(CONTAINS(TEXT(YEAR( Birthday_New__c )),&quot;1900&quot;)  ),TEXT(FLOOR((TODAY() -  Birthday_New__c)/365.25))&amp; &quot; years&quot;, IF(  NOT( ISNULL( Indicative_age__c ) ), TEXT( YEAR(  today() )- YEAR( DATEVALUE(CreatedDate))+  Indicative_age__c )&amp; &quot; years&quot;,&apos;&apos;))</formula>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anniversary_Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anniversary Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anniversary__c</fullName>
        <label>Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Annual_Income__c</fullName>
        <label>Annual Income</label>
        <picklist>
            <picklistValues>
                <fullName>50 Lacs to 1 Crore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Crore to 5 Crores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Crores to 10 Crores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Crores to 20 Crores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 20 Crores</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Art_Likes__c</fullName>
        <label>Art (Likes)</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Art_dislikes__c</fullName>
        <label>Art (Dislikes)</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthday_Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Birthday Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Birthday_New__c</fullName>
        <defaultValue>DATE(1900,01,01)</defaultValue>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <description>Campaign for profile</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Car_Brand__c</fullName>
        <label>Car Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mahindra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maruti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Porsche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rolls Royce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skoda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toyota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volkswagen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Rover</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Car_model__c</fullName>
        <label>Car model</label>
        <picklist>
            <controllingField>Car_Brand__c</controllingField>
            <picklistValues>
                <fullName>80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A4 Allroad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A5 Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A6 Allroad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A7 Sportback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arnage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brooklands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continental Flying Spur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continental GT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continental GTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corniche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eight</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charity_Donors__c</fullName>
        <label>Charity Donors</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>Residence City</label>
        <picklist>
            <picklistValues>
                <fullName>Ahmedabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amritsar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dehradun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faridabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ghaziabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gurgaon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jodhpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kolkatta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lucknow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ludhiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mysore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patiala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Srinagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Udaipur</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Club_memberships__c</fullName>
        <label>Club memberships</label>
        <picklist>
            <picklistValues>
                <fullName>Aralias</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chelmsford Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classic Golf Resort (ITC-owned)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defence Colony Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi Golf Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DLF City Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DLF Golf &amp; Country Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friends Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golden Greens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gymkhana Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India Habitat Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India Interational Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jahanpanah Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaypee Greens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magnolias</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panchsheel Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjabi Bagh Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports and Cultural Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Palms - Town &amp; Country Club</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Address__c</fullName>
        <label>Company Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Email__c</fullName>
        <label>Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_city__c</fullName>
        <label>Company city</label>
        <picklist>
            <picklistValues>
                <fullName>Ahmedabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amritsar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faridabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ghaziabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gurgaon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kolkata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lucknow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ludhiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patiala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Udaipur</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_country__c</fullName>
        <label>Company country</label>
        <picklist>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_pincode__c</fullName>
        <label>Company pincode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Previous Jeweler</label>
        <picklist>
            <picklistValues>
                <fullName>Bosco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC jewelers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RR</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ContactSrc__c</fullName>
        <label>Contact Source</label>
        <picklist>
            <picklistValues>
                <fullName>Ambika Jain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ami Modi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anuj Rakyan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aparajita Jain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aparna Chudasama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arundhati De</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ashi Burman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chhaya Momaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi Member List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhu Gupta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nirav Modi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pragna Modi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ritu Chhabria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soni Aggarwal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunaina Vahi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YPO</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>Contact_ExternalID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Full_Name__c</fullName>
        <formula>FirstName +&quot; &quot;+ LastName</formula>
        <label>Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Countries_visited__c</fullName>
        <label>Countries visited</label>
        <picklist>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nepal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egypt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kuwait</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maldives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mauritius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saudi Arabia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switzerland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turkey</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Residence Country</label>
        <picklist>
            <picklistValues>
                <fullName>India</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diwali__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diwali</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Office__c</fullName>
        <label>Email Office</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_alternate_if_any__c</fullName>
        <label>Email alternate, if any</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Types__c</fullName>
        <label>Engagement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Anniversary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diwali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclusive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibition</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Fax_Residence__c</fullName>
        <label>Fax Residence</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Food_Drink_Dislikes__c</fullName>
        <label>Food/Drink (Dislikes)</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Food_Drink_Likes__c</fullName>
        <label>Food/Drink (Likes)</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_College_Name__c</fullName>
        <label>Graduation College Name</label>
        <picklist>
            <picklistValues>
                <fullName>IIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IIT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Graduation_Location__c</fullName>
        <label>Graduation Location</label>
        <picklist>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hand_bag_if_any__c</fullName>
        <label>Hand bag, if any</label>
        <picklist>
            <picklistValues>
                <fullName>Armani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottega Veneta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Da Milano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DKNY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fendi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gucci</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hermes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longchamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LVMH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michael Kors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salvatore Ferragamo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stella McCartney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Versace</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Image_Link__c</fullName>
        <formula>IMAGE((Image_URL__c ), &quot;Contact Photo&quot;, 140,140)</formula>
        <label>Image Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indicative_age__c</fullName>
        <label>Indicative age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not For Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecommunications</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Luxury_brands_Dislikes__c</fullName>
        <label>Luxury brands (Dislikes)</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Luxury_brands_Likes__c</fullName>
        <label>Luxury brands (Likes)</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Magazines_read__c</fullName>
        <label>Magazines read</label>
        <picklist>
            <picklistValues>
                <fullName>Cosmopolitan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harper&apos;s Bazaar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marie Clarie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Woman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sportstar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vogue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Women&apos;s Era</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Divorcee/Separated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single/Unmarried</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meal_Preferences__c</fullName>
        <label>Meal Preferences</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_name__c</fullName>
        <label>Middle name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Alternate__c</fullName>
        <label>Mobile Alternate</label>
        <type>Phone</type>
    </fields>
</CustomObject>